--- a/css/style.css
+++ b/css/style.css
@@ -153,3 +153,28 @@ img {
 
   background-color: #e5a722;
 }
+
+.about__title {
+  font-size: 45px;
+  font-weight: 500;
+  line-height: 45px;
+}
+
+.about__description {
+  font: inherit;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.about__list {
+  list-style: none;
+}
+
+.about__services {
+  font: inherit;
+}
+
+.table {
+  width: 350px;
+  height: 100px;
+}
