--- a/css/style.css
+++ b/css/style.css
@@ -94,12 +94,16 @@ img {
 }
 
 .button {
+  border: none;
+
   font-weight: 500;
   line-height: 18px;
   color: #fff;
   text-transform: uppercase;
 
   background-color: #fb565a;
+
+  cursor: pointer;
 }
 
 .button:hover,
@@ -196,6 +200,9 @@ img {
   opacity: 0.1;
 }
 
+/* ===== Стилизация контентной части страницы каталога*/
+
+
 /* ===== Стилизация футера */
 .map__title {
   font-size: 18px;
@@ -232,4 +239,16 @@ img {
   font-size: 36px;
   font-weight: 700;
   line-height: 36px;
+}
+
+/* ===== Стилизация модального окна */
+.footer__text {
+  font-size: 45px;
+  font-weight: 500;
+  line-height: 45px;
+}
+
+.feedback__label {
+  font-weight: 700;
+  line-height: 18px;
 }
