--- a/css/style.css
+++ b/css/style.css
@@ -569,6 +569,8 @@ a {
   position: relative;
 
   padding-top: 79px;
+
+  overflow: hidden;
 }
 
 .map__img {
@@ -622,8 +624,39 @@ a {
   padding: 16px 44px;
 }
 
+.footer__socials {
+  display: flex;
+  align-items: center;
+  width: 1200px;
+  margin: 0 auto;
+  padding: 65px 20px;
+  box-sizing: border-box;
+}
+
+.footer__list {
+  display: flex;
+  flex-basis: 260px;
+  margin: 0;
+  margin-right: 132px;
+  padding: 0;
+
+  list-style: none;
+}
+
+.footer__item {
+  margin-right: 10px;
+}
+
 .footer__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 80px;
+
   background-color: #e1e1e1;
+  border-radius: 50%;
+
 }
 
 .footer__img {
@@ -642,12 +675,24 @@ a {
 }
 
 .footer__title {
+  margin: 0;
+  margin-bottom: 7px;
+
   font-size: 36px;
   font-weight: 700;
   line-height: 36px;
 }
 
+.footer_description {
+  margin: 0;
+  letter-spacing: 0.2px;
+}
+
 /* ===== Стилизация модального окна */
+.feedback {
+  display: none;
+}
+
 .footer__text {
   font-size: 45px;
   font-weight: 500;
