--- a/css/style.css
+++ b/css/style.css
@@ -487,6 +487,10 @@ a {
   letter-spacing: 0.6px;
 }
 
+.filter__legend_margin {
+  margin-bottom: 14px;
+}
+
 .range {
   position: relative;
 
@@ -569,12 +573,56 @@ a {
 }
 
 .filter__list {
+  margin: 0;
+  padding: 0;
+  padding-left: 37px;
+
   list-style: none;
+}
+
+.filter__item {
+  position: relative;
+
+  padding-bottom: 16px;
 }
 
 .filter__label {
   color: #283136;
   line-height: 20px;
+
+  cursor: pointer;
+}
+
+.filter__label-radio::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: -36px;
+
+  width: 27px;
+  height: 27px;
+
+  background-image: url("../img/catalog/radio-off.svg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+
+  opacity: 0.4;
+}
+
+.filter__input:focus + .filter__label {
+  outline: 2px solid #81b3d2;
+}
+
+.filter__input:checked + .filter__label-radio::before{
+  background-image: url("../img/catalog/radio-on.svg");
+}
+
+.filter__label-radio:hover::before{
+  opacity: 1;
+}
+
+.filter__label-radio:disabled::before{
+  opacity: 0.1;
 }
 
 .button_filter {
