--- a/css/style.css
+++ b/css/style.css
@@ -477,6 +477,10 @@ a {
   padding: 0;
 }
 
+.filter__fieldset_margin {
+  margin-bottom: 27px;
+}
+
 .filter__legend {
   margin-bottom: 48px;
 
@@ -621,11 +625,33 @@ a {
   opacity: 1;
 }
 
-.filter__label-radio:disabled::before{
-  opacity: 0.1;
+.filter__label-checkbox::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: -36px;
+
+  width: 27px;
+  height: 27px;
+
+  background-image: url("../img/catalog/checkbox-off.svg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+
+  opacity: 0.4;
+}
+
+.filter__input:checked + .filter__label-checkbox::before{
+  background-image: url("../img/catalog/checkbox-on.svg");
+}
+
+.filter__label-checkbox:hover::before{
+  opacity: 1;
 }
 
 .button_filter {
+  padding: 16px 89px;
+
   color: #000;
 
   background-color: #eee;
