--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,8 @@ a {
   line-height: 30px;
   color: #000;
   text-transform: uppercase;
+
+  transition: 0.2s;
 }
 
 .menu__link:hover,
@@ -194,6 +196,8 @@ a {
   border-radius: 3px;
 
   cursor: pointer;
+
+  transition: 0.3s;
 }
 
 .button:hover,
@@ -443,6 +447,10 @@ a {
   display: block;
 }
 
+.partners__img {
+  transition: 0.3s;
+}
+
 .partners__link .partners__img {
   opacity: 0.2;
 }
@@ -626,6 +634,7 @@ a {
   background-repeat: no-repeat;
 
   opacity: 0.4;
+  transition: 0.2s;
 }
 
 .filter__input:focus + .filter__label {
@@ -654,6 +663,7 @@ a {
   background-repeat: no-repeat;
 
   opacity: 0.4;
+  transition: 0.2s;
 }
 
 .filter__input:checked + .filter__label-checkbox::before{
@@ -725,6 +735,8 @@ a {
   line-height: 18px;
   color: #b2b2b2;
   text-transform: uppercase;
+
+  transition: 0.2s;
 }
 
 .sorting__link:hover,
@@ -859,6 +871,8 @@ a {
 
   background-color: #eee;
   border-radius: 2px;
+
+  transition: 0.2s;
 }
 
 .pagination__link:hover,
@@ -981,7 +995,7 @@ a {
   background-color: #e1e1e1;
 
   border-radius: 50%;
-
+  transition: 0.2s;
 }
 
 .footer__img {
