--- a/css/style.css
+++ b/css/style.css
@@ -1147,6 +1147,12 @@ a {
   fill: #fb565a;
 
   opacity: 0.3;
+
+  transition: 0.5s;
+}
+
+.feedback__close:hover .feedback__close-icon {
+  transform: rotate(90deg);
 }
 
 .feedback__close:hover .feedback__close-icon,
