--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ a {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  width: 440px;
+  width: 490px;
   margin: 0;
   padding: 0;
 
@@ -83,9 +83,11 @@ a {
 
 .menu__item {
   position: relative;
+
+  margin-right: 46px;
 }
 
-.menu__item_active::after {
+.menu__item--active::after {
   content: "";
   position: absolute;
   right: 0;
@@ -145,6 +147,12 @@ a {
   box-sizing: border-box;
 }
 
+.promo__wrapper {
+  position: relative;
+
+  overflow: hidden;
+}
+
 .promo__list {
   margin: 0;
   padding: 0;
@@ -160,21 +168,27 @@ a {
   background-repeat: no-repeat;
 }
 
-.promo__item_first-slide {
+.promo__item--first {
+  display: none;
+
   background-image: url("../img/index/slider-1.png");
   background-position: 93% 0;
 }
 
-.promo__item_second-slide {
+.promo__item--second {
   display: none;
 
   background-image: url("../img/index/slider-2.png");
 }
 
-.promo__item_third-slide {
+.promo__item--third {
   display: none;
 
   background-image: url("../img/index/slider-3.png");
+}
+
+.promo__item--active {
+  display: block;
 }
 
 .promo__slogan {
@@ -224,12 +238,41 @@ a {
   background-color: #d7373b;
 }
 
-.button_promo-link {
+.button--promo-link {
   padding: 15px 54px;
+}
+
+.controls {
+  position: absolute;
+  bottom: 90px;
+  left: 50%;
+
+  margin: 0;
+
+  transform: translateX(-45px);
+}
+
+.control {
+  position: relative;
+
+  width: 20px;
+  height: 20px;
+  margin-right: 12px;
+
+  background-color: #fff;
+  border-radius: 50%;
+  border: transparent;
+
+  cursor: pointer;
+}
+
+.control--active {
+  border: 2px solid #000
 }
 
 .services {
   padding: 80px 0;
+  padding-bottom: 65px;
 
   border-bottom: 2px solid #eee;
 }
@@ -246,6 +289,7 @@ a {
 .services__item {
   width: 300px;
   margin-right: 100px;
+  margin-bottom: 15px;
   padding-top: 171px;
 
   background-position: 0 0;
@@ -284,31 +328,31 @@ a {
   color: #283136;
 }
 
-.button_apps {
+.button--apps {
   background-color: #00ca74;
 }
 
-.button_apps:hover,
-.button_apps:focus {
+.button--apps:hover,
+.button--apps:focus {
   background-color: #00bc6c;
 }
 
-.button_apps:active {
+.button--apps:active {
   color: rgba(255, 255, 255, 0.3);
 
   background-color: #00aa62;
 }
 
-.button_presentation {
+.button--presentation {
   background-color: #efc84a;
 }
 
-.button_presentation:hover,
-.button_presentation:focus {
+.button--presentation:hover,
+.button--presentation:focus {
   background-color: #eab534;
 }
 
-.button_presentation:active {
+.button--presentation:active {
   color: rgba(255, 255, 255, 0.3);
 
   background-color: #e5a722;
@@ -382,7 +426,7 @@ a {
   background-repeat: no-repeat;
 }
 
-.about__description_align {
+.about__description--align {
   text-align: center;
 }
 
@@ -406,7 +450,7 @@ a {
   font-size: 29px;
 }
 
-.table__cell_regular {
+.table__cell--regular {
   font-size: 16px;
   line-height: 18px;
 }
@@ -420,7 +464,9 @@ a {
 
 .partners__list {
   display: flex;
+  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
 
@@ -513,7 +559,7 @@ a {
   padding: 0;
 }
 
-.filter__fieldset_margin {
+.filter__fieldset--margin {
   margin-bottom: 27px;
 }
 
@@ -527,7 +573,7 @@ a {
   letter-spacing: 0.6px;
 }
 
-.filter__legend_margin {
+.filter__legend--margin {
   margin-bottom: 14px;
 }
 
@@ -687,7 +733,7 @@ a {
   opacity: 1;
 }
 
-.button_filter {
+.button__filter {
   padding: 16px 89px;
 
   color: #000;
@@ -695,12 +741,12 @@ a {
   background-color: #eee;
 }
 
-.button_filter:hover,
-.button_filter:focus {
+.button__filter:hover,
+.button__filter:focus {
   background-color: #dfdfdf;
 }
 
-.button_filter:active {
+.button__filter:active {
   color: #959595;
 
   background-color: #d5d5d5;
@@ -712,6 +758,7 @@ a {
 
 .sorting {
   display: flex;
+  flex-wrap: wrap;
   padding-bottom: 55px;
 }
 
@@ -761,7 +808,7 @@ a {
   color: #000;
 }
 
-.sorting__link_active {
+.sorting__link--active {
   color: #000;
 }
 
@@ -863,6 +910,7 @@ a {
 
 .pagination__list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   padding-top: 30px;
@@ -872,6 +920,8 @@ a {
 
 .pagination__item {
   margin-right: 12px;
+  margin-bottom: 10px;
+
 }
 
 .pagination__link {
@@ -899,7 +949,7 @@ a {
   background-color: #d5d5d5;
 }
 
-.pagination__link_active {
+.pagination__link--active {
   padding: 7px 17px;
   box-sizing: border-box;
 
@@ -907,7 +957,7 @@ a {
   border: 3px solid #dbdbdb;
 }
 
-.pagination__link_next {
+.pagination__link--next {
   width: 260px;
   box-sizing: border-box;
 
@@ -920,7 +970,9 @@ a {
   position: relative;
 
   min-height: 416px;
-  padding-top: 79px;
+  padding-top: 49px;
+
+  overflow: hidden;
 }
 
 .map__interactive {
@@ -994,9 +1046,9 @@ a {
 
 .footer__list {
   display: flex;
-  flex-basis: 260px;
+  flex-wrap: wrap;
+  width: 400px;
   margin: 0;
-  margin-right: 132px;
   padding: 0;
 
   list-style: none;
@@ -1004,6 +1056,7 @@ a {
 
 .footer__item {
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .footer__link {
@@ -1043,7 +1096,7 @@ a {
   line-height: 36px;
 }
 
-.footer_description {
+.footer__description {
   margin: 0;
 
   letter-spacing: 0.2px;
