--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,21 @@ a {
 
 .promo__item--active {
   display: block;
+
+  animation-name: slider;
+  animation-duration: 0.6s;
+}
+
+@keyframes slider {
+  from {
+    opacity: 0.7;
+    transform: scale(0.9);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .promo__slogan {
