--- a/css/style.css
+++ b/css/style.css
@@ -300,8 +300,18 @@ a {
   cursor: pointer;
 }
 
-.control--active {
-  border: 2px solid #000
+.control--active::after {
+  content: "";
+
+  position: absolute;
+  top: 4px;
+  left: 4px;
+
+  width: 8px;
+  height: 8px;
+
+  border: 2px solid #5e5f5f;
+  border-radius: 50%;
 }
 
 .services {
